manifests/app/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-todo-app
  namespace: demo-todo
  labels:
    app: demo-todo-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: demo-todo-app

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: demo-todo-app

    spec:
      containers:
      - name: demo-todo-app
        image: zinlinhtetdevops/demo-todo-app:6c6e6cba0e529873ac69debc1d9e465aee177f82
        imagePullPolicy: Always

        ports:
        - containerPort: 3000

        resources:
          requests:
            memory: "128Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"

        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 20
          periodSeconds: 10
          failureThreshold: 3

        readinessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          failureThreshold: 3
