manifests/app/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: demo-todo-app
  name: demo-todo-svc
  namespace: demo-todo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: demo-todo-app
  type: NodePort
