manifests/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-todo-alb
  namespace: demo-todo
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/group.name: main-alb
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: "200,301,302"

spec:
  ingressClassName: alb
  rules:
    - host: todo.frandisharing.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: demo-todo-svc
                port:
                  number: 80
